creditas-sf/force-app/main/default/objects/PersonalDataSection__c/PersonalDataSection__c.object-meta.xml
<CustomObject>
    <label>Seção de Dados Pessoais</label>
    <nameField>
        <label>Nome do Cliente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seção de Dados Pessoais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>