creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/AgeObservation__c.field-meta.xml
<CustomField>
    <fullName>AgeObservation__c</fullName>
    <label>Observação da idade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>