creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/AgeReason__c.field-meta.xml
<CustomField>
    <fullName>AgeReason__c</fullName>
    <label>Motivo da idade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>