creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/AgeSubReason__c.field-meta.xml
<CustomField>
    <fullName>AgeSubReason__c</fullName>
    <label>Sub-motivo da idade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>