creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthCityObservation__c.field-meta.xml
<CustomField>
    <fullName>BirthCityObservation__c</fullName>
    <label>Observação da cidade de nascimento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>