creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthCityReason__c.field-meta.xml
<CustomField>
    <fullName>BirthCityReason__c</fullName>
    <label>Motivo da cidade de nascimento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>