creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthCitySubReason__c.field-meta.xml
<CustomField>
    <fullName>BirthCitySubReason__c</fullName>
    <label>Sub-motivo da cidade de nascimento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>