creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthCountryObservation__c.field-meta.xml
<CustomField>
    <fullName>BirthCountryObservation__c</fullName>
    <label>Observação do país de nascimento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>