creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthCountryReason__c.field-meta.xml
<CustomField>
    <fullName>BirthCountryReason__c</fullName>
    <label>Motivo do país de nascimento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>