creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthCountrySubReason__c.field-meta.xml
<CustomField>
    <fullName>BirthCountrySubReason__c</fullName>
    <label>Sub-motivo do país de nascimento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>