creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthDateObservation__c.field-meta.xml
<CustomField>
    <fullName>BirthDateObservation__c</fullName>
    <label>Observação da data de nascimento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>