creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthDateReason__c.field-meta.xml
<CustomField>
    <fullName>BirthDateReason__c</fullName>
    <label>Motivo da data de nascimento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>