creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/BirthDateSubReason__c.field-meta.xml
<CustomField>
    <fullName>BirthDateSubReason__c</fullName>
    <label>Sub-motivo da data de nascimento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>