creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHdispatchDateObservation__c.field-meta.xml
<CustomField>
    <fullName>CNHdispatchDateObservation__c</fullName>
    <label>Observação da data de expedição da CNH</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>