creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHdispatchDateReason__c.field-meta.xml
<CustomField>
    <fullName>CNHdispatchDateReason__c</fullName>
    <label>Motivo da data de expedição da CNH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>