creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHdispatchDateSubReason__c.field-meta.xml
<CustomField>
    <fullName>CNHdispatchDateSubReason__c</fullName>
    <label>Sub-motivo da data de expedição da CNH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>