creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHissuingAgencyObservation__c.field-meta.xml
<CustomField>
    <fullName>CNHissuingAgencyObservation__c</fullName>
    <label>Observação do órgão expedidor da CNH</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>