creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHissuingAgencyReason__c.field-meta.xml
<CustomField>
    <fullName>CNHissuingAgencyReason__c</fullName>
    <label>Motivo do órgão expedidor da CNH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>