creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHissuingAgencyStatus__c.field-meta.xml
<CustomField>
    <fullName>CNHissuingAgencyStatus__c</fullName>
    <label>Status do órgão expedidor da CNH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Pendenciado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>