creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHissuingAgencySubReason__c.field-meta.xml
<CustomField>
    <fullName>CNHissuingAgencySubReason__c</fullName>
    <label>Sub-motivo do órgão expedidor da CNH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>