creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHnumberObservation__c.field-meta.xml
<CustomField>
    <fullName>CNHnumberObservation__c</fullName>
    <label>Observação do número da CNH</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>