creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHnumberPendingReason__c.field-meta.xml
<CustomField>
    <fullName>CNHnumberPendingReason__c</fullName>
    <label>Motivo Pendência do Número da CNH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documento ilegível</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>