creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHnumberReason__c.field-meta.xml
<CustomField>
    <fullName>CNHnumberReason__c</fullName>
    <label>Motivo do número da CNH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>