creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CNHnumberSubReason__c.field-meta.xml
<CustomField>
    <fullName>CNHnumberSubReason__c</fullName>
    <label>Sub-motivo do número da CNH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>