creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CPFDescription__c.field-meta.xml
<CustomField>
    <fullName>CPFDescription__c</fullName>
    <label>Descrição de CPF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>