creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CPFObservation__c.field-meta.xml
<CustomField>
    <fullName>CPFObservation__c</fullName>
    <label>Observação do CPF</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>