creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CPFPendingReason__c.field-meta.xml
<CustomField>
    <fullName>CPFPendingReason__c</fullName>
    <label>Motivo Pendência CPF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPF Irregular na Receita Federal</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
           
        </valueSetDefinition>
    </valueSet>
</CustomField>