creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CPFreason__c.field-meta.xml
<CustomField>
    <fullName>CPFreason__c</fullName>
    <label>Motivo do CPF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>