creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/CPFSubReason__c.field-meta.xml
<CustomField>
    <fullName>CPFSubReason__c</fullName>
    <label>Sub-motivo do CPF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>