creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/DispatchDateObservation__c.field-meta.xml
<CustomField>
    <fullName>DispatchDateObservation__c</fullName>
    <label>Observação da data de expedição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>