creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/DispatchDateReason__c.field-meta.xml
<CustomField>
    <fullName>DispatchDateReason__c</fullName>
    <label>Motivo da data de expedição</label>
    <length>100</length>
    <type>Text</type>
</CustomField>