creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/DispatchDateSubReason__c.field-meta.xml
<CustomField>
    <fullName>DispatchDateSubReason__c</fullName>
    <label>Sub-motivo da data de expedição</label>
    <length>100</length>
    <type>Text</type>
</CustomField>