creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/FathersNameObservation__c.field-meta.xml
<CustomField>
    <fullName>FathersNameObservation__c</fullName>
    <label>Observação do nome do pai</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>