creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/FathersNameReason__c.field-meta.xml
<CustomField>
    <fullName>FathersNameReason__c</fullName>
    <label>Motivo do nome do pai</label>
    <length>100</length>
    <type>Text</type>
</CustomField>