creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/FathersNameSubReason__c.field-meta.xml
<CustomField>
    <fullName>FathersNameSubReason__c</fullName>
    <label>Sub-motivo do nome do pai</label>
    <length>100</length>
    <type>Text</type>
</CustomField>