creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/GenrePendingSubReason__c.field-meta.xml
<CustomField>
    <fullName>GenrePendingSubReason__c</fullName>
    <label>Sub Motivo Pendência Gênero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>