creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/IssuingAgencyObservation__c.field-meta.xml
<CustomField>
    <fullName>IssuingAgencyObservation__c</fullName>
    <label>Observação do órgão expedidor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>