creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/IssuingAgencyReason__c.field-meta.xml
<CustomField>
    <fullName>IssuingAgencyReason__c</fullName>
    <label>Motivo do órgão expedidor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>