creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/IssuingAgencySubReason__c.field-meta.xml
<CustomField>
    <fullName>IssuingAgencySubReason__c</fullName>
    <label>Sub-motivo do órgão expedidor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>