creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/MothersNameObservation__c.field-meta.xml
<CustomField>
    <fullName>MothersNameObservation__c</fullName>
    <label>Observação do nome da mãe</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>