creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/MothersNameReason__c.field-meta.xml
<CustomField>
    <fullName>MothersNameReason__c</fullName>
    <label>Motivo do nome da mãe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>