creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/MothersNameSubReason__c.field-meta.xml
<CustomField>
    <fullName>MothersNameSubReason__c</fullName>
    <label>Sub-motivo do nome da mãe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>