creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/NameObservation__c.field-meta.xml
<CustomField>
    <fullName>NameObservation__c</fullName>
    <label>Observação do nome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>