creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/NameReason__c.field-meta.xml
<CustomField>
    <fullName>NameReason__c</fullName>
    <label>Motivo do nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>