creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/NameStatus__c.field-meta.xml
<CustomField>
    <fullName>NameStatus__c</fullName>
    <label>Status do Nome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovar</fullName>
            </value>
            <value>
                <fullName>Rejeitar</fullName>
            </value>
            <value>
                <fullName>Pendenciar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>