creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/NameSubReason__c.field-meta.xml
<CustomField>
    <fullName>NameSubReason__c</fullName>
    <label>Sub-motivo do nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>