creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/NationalityObservation__c.field-meta.xml
<CustomField>
    <fullName>NationalityObservation__c</fullName>
    <label>Observação da nacionalidade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>