creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/NationalityReason__c.field-meta.xml
<CustomField>
    <fullName>NationalityReason__c</fullName>
    <label>Motivo da nacionalidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>