creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/NationalitySubReason__c.field-meta.xml
<CustomField>
    <fullName>NationalitySubReason__c</fullName>
    <label>Sub-motivo da nacionalidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>