creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/PersonExposedRejectReason__c.field-meta.xml
<CustomField>
    <fullName>PersonExposedRejectReason__c</fullName>
    <label>Motivo Rejeição Pessoa Politicamente Exp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identificado PEP</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>