creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/PoliticallyExposedPersonObservation__c.field-meta.xml
<CustomField>
    <fullName>PoliticallyExposedPersonObservation__c</fullName>
    <label>Observação pessoa politicamente exposta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>