creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/PoliticallyExposedPersonReason__c.field-meta.xml
<CustomField>
    <fullName>PoliticallyExposedPersonReason__c</fullName>
    <label>Motivo da pessoa politicamente exposta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>