creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/PoliticallyExposedPersonSubReason__c.field-meta.xml
<CustomField>
    <fullName>PoliticallyExposedPersonSubReason__c</fullName>
    <label>Sub-motivo pessoa politicamente exposta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>