creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/RGobservation__c.field-meta.xml
<CustomField>
    <fullName>RGobservation__c</fullName>
    <label>Observação do RG</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>