creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/RGsubReason__c.field-meta.xml
<CustomField>
    <fullName>RGsubReason__c</fullName>
    <label>Sub-motivo do RG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>