creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/UFissuingAgencyObservation__c.field-meta.xml
<CustomField>
    <fullName>UFissuingAgencyObservation__c</fullName>
    <label>Observação do UF do órgão expedidor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>