creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/UFissuingAgencyReason__c.field-meta.xml
<CustomField>
    <fullName>UFissuingAgencyReason__c</fullName>
    <label>Motivo do UF do órgão expedidor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>