creditas-sf/force-app/main/default/objects/PersonalDataSection__c/fields/UFissuingAgencySubReason__c.field-meta.xml
<CustomField>
    <fullName>UFissuingAgencySubReason__c</fullName>
    <label>Sub-motivo do UF do órgão expedidor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>